Script changes for better internal reference product sequence - validation check / documentation p4h_sale - validation check / documentation

--- a/p4h_sale/views/mif_file.xml
+++ b/p4h_sale/views/mif_file.xml
@@ -23,8 +23,8 @@
         <menuitem
             action="action_mif_file"
             id="menu_mif_file"
-            parent="stock.menu_stock_inventory_control"
-            sequence="190"/>
+            parent="menu_masterdata_sources"
+            sequence="20"/>
 
 </data>
 </odoo>
