--- a/p4h_sale/views/sale_order.xml
+++ b/p4h_sale/views/sale_order.xml
@@ -7,11 +7,19 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="before">
-                    <field name="original_product_id" invisible="1"/>
+                    <field name="original_product_id" invisible="0"/>
                 </xpath>
+                <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="attributes">
+                    <attribute name="string">To Fulfill</attribute>
+                </xpath>
+
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="before">
-                    <field name="original_product_id" invisible="1"/>
+                    <field name="original_product_id" invisible="0"/>
                 </xpath>
+               <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="attributes">
+                    <attribute name="string">To Fulfill</attribute>
+                </xpath>
+
             </field>
         </record>
     </data>
