--- a/base_edi/views/edi_config_view.xml
+++ b/base_edi/views/edi_config_view.xml
@@ -188,6 +188,17 @@
                                                     <field name="last_sync_date" readonly="1"/>
                                                 </group>
                                             </group>
+                                            <group string="MIF Files">
+                                                <field name="mif_ids" nolable="1">
+                                                    <tree>
+                                                        <field name="name"/>
+                                                        <field name="log_note"/>
+                                                        <field name="mif_directory"/>
+                                                        <field name="manufacturer"/>
+                                                        <field name="state"/>
+                                                    </tree>
+                                                </field>
+                                            </group>
                                         </sheet>
                                     </form>
                                 </field>
