[IMP]script improvement + view improvement for mif file

--- a/base_edi/views/edi_config_view.xml
+++ b/base_edi/views/edi_config_view.xml
@@ -190,7 +190,7 @@
                                             </group>
                                             <group string="MIF Files">
                                                 <field name="mif_ids" nolable="1">
-                                                    <tree>
+                                                    <tree editable="bottom">
                                                         <field name="name"/>
                                                         <field name="log_note"/>
                                                         <field name="mif_directory"/>
