--- a/p4h_sale/views/mif_file.xml
+++ b/p4h_sale/views/mif_file.xml
@@ -8,8 +8,43 @@
             <field name="arch" type="xml">
                 <tree string="Mif File" default_order="create_date desc">
                     <field name="name"/>
+                    <field name="log_note"/>
+                    <field name="state"/>
                     <field name="create_date" string='Load Date'/>
                 </tree>
+            </field>
+        </record>
+
+        <record id="view_mif_file_form" model="ir.ui.view">
+            <field name="name">mif.file.form</field>
+            <field name="model">mif.file</field>
+            <field name="arch" type="xml">
+                <form string='MIF File'>
+                    <sheet>
+                        <div class="oe_button_box" name="button_box">
+                            <button class="oe_stat_button" name="action_view_models" type="object" icon="fa-building">
+                                <div class="o_field_widget o_stat_info">
+                                    <span class="o_stat_value">
+                                        <field name="model_counts" widget="statinfo" nolabel="1" class="mr4"/>
+                                    </span>
+                                    <span class="o_stat_text">Models</span>
+                                </div>
+                            </button>
+                            <button class="oe_stat_button" name="action_view_parts" type="object" icon="fa-building">
+                                <div class="o_field_widget o_stat_info">
+                                    <span class="o_stat_value">
+                                        <field name="part_counts" widget="statinfo" nolabel="1" class="mr4"/>
+                                    </span>
+                                    <span class="o_stat_text">Parts</span>
+                                </div>
+                            </button>
+                        </div>
+                        <field name="name"/>
+                        <field name="log_note"/>
+                        <field name="state"/>
+                        <field name="create_date" string='Load Date'/>
+                    </sheet>
+                </form>
             </field>
         </record>
 
